apps/recipit/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipit-dev
  labels:
    goldilocks.fairwinds.com/enabled: "true"
