apps/recipit/base/recipit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipit-deploy
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: recipit-deploy
  template:
    metadata:
      labels:
        app: recipit-deploy
    spec:
      containers:
      - name: recipit
        image: ghcr.io/yoramvandevelde/recipit:5381f80f043fe26d0f26af65c86a1048db34b6ae
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false        
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /srv/data
          name: recipit-storage
      volumes:
      - name: recipit-storage
        persistentVolumeClaim:
          claimName: recipit-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: recipit-svc
spec:
  selector:
    app: recipit-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
