apps/recipit/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipit-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: recipit.local.sifft.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipit-svc
            port:
              number: 80
